--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -14,12 +14,18 @@ jobs:
       - uses: docker/setup-buildx-action@v2
 
       # TODO build, publish to docker hub, deploy to k8s
+      # - name: Build and publish images
+      #   timeout-minutes: 10
+      #   run: |
+      #     ./scripts/publish.sh
+      #     docker compose build
+      #     ./scripts/push-images.sh
 
       - name: Run API Tests
         uses: matt-ball/newman-action@master
         with:
-          collection: <variant>/postman/collection.json
-          environment: <variant>/postman/environment.json
+          collection: v1/postman/collection.json
+          environment: v1/postman/environment.json
           delayRequest: 100
           reporters: '[ "cli" ]'
 
