--- a/k8s/services-chart/values.yaml
+++ b/k8s/services-chart/values.yaml
@@ -3,32 +3,40 @@ bonus:
     port: 8050
     image:
       name: maxkozlov/rsoi-bonus-service
-      version: "latest"
+      version: "1.0"
     database:
       name: privileges
+      username: program
+      password: test
 
 flight:
   service:
     port: 8060
     image:
       name: maxkozlov/rsoi-flight-service
-      version: "latest"
+      version: "1.0"
     database: 
       name: flights
+      username: program
+      password: test
 
 ticket:
   service:
     port: 8070
     image:
       name: maxkozlov/rsoi-ticket-service
-      version: "latest"
+      version: "1.0"
     database: 
       name: tickets
+      username: program
+      password: test
 
 gateway:
   service:
     port: 8080
     image:
       name: maxkozlov/rsoi-api-gateway
-      version: "latest"
+      version: "1.0"
+    # enviroments:
+    #  FlightsService__Host: "http://flight-service:8060"
     isGateway: true
