--- a/k8s/services-chart/charts/service-chart/templates/deployment.yaml
+++ b/k8s/services-chart/charts/service-chart/templates/deployment.yaml
@@ -33,6 +33,20 @@ spec:
             - name: DATABASE_URL
               value: "Host={{ .Values.service.database.host }};User ID={{ .Values.service.database.username }};Password={{ .Values.service.database.password }};Port={{ .Values.service.database.port }};Database={{ .Values.service.database.name }};"
             {{- end }}
+            {{ if .Values.service.rabbitmq.host }}
+            - name: RabbitMqTransportOptions__Host
+              value: "{{ .Values.service.rabbitmq.host }}"
+            - name: RabbitMqTransportOptions__Port
+              value: "{{ .Values.service.rabbitmq.port }}"
+            - name: RabbitMqTransportOptions__User
+              value: "{{ .Values.service.rabbitmq.username }}"
+            - name: RabbitMqTransportOptions__Pass
+              value: "{{ .Values.service.rabbitmq.password }}"
+            {{- end }}
+            {{- range $key, $value := .Values.service.enviroments }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+            {{- end }}
           ports:
             - name: web
               containerPort: {{ .Values.service.port }}
