--- a/src/FlightBooking.BonusService/appsettings.Development.json
+++ b/src/FlightBooking.BonusService/appsettings.Development.json
@@ -9,11 +9,5 @@
       }
     }
   },
-  "DATABASE_URL": "Host=localhost;User ID=program;Password=test;Port=5432;Database=privileges;",
-  "RabbitMqTransportOptions": {
-    "Host": "localhost",
-    "Port": 5672,
-    "User": "guest",
-    "Pass": "guest"
-  }
+  "DATABASE_URL": "Host=localhost;User ID=program;Password=test;Port=5432;Database=privileges;"
 }
