--- a/src/FlightBooking.BonusService/appsettings.json
+++ b/src/FlightBooking.BonusService/appsettings.json
@@ -30,12 +30,5 @@
   },
   "PORT": 8050,
   "AllowedHosts": "*",
-  "DATABASE_URL": "Host=postgres;User ID=program;Password=test;Port=5432;Database=privileges;",
-  "EndpointPrefix": "bonus-service",
-  "RabbitMqTransportOptions": {
-    "Host": "rabbit",
-    "Port": 5672,
-    "User": "guest",
-    "Pass": "guest"
-  }
+  "DATABASE_URL": "Host=postgres;User ID=program;Password=test;Port=5432;Database=privileges;"
 }
