--- a/k8s/load-balancer.yaml
+++ b/k8s/load-balancer.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   ports:
   # Порт сетевого балансировщика, на котором будут обслуживаться пользовательские запросы.
-  - port: 80
-    name: plaintext
+  - protocol: TCP
+    port: 80
     # Порт контейнера, на котором доступно приложение.
     targetPort: 8080
   # Метки селектора, использованные в шаблоне подов при создании объекта Deployment.
