--- a/src/FlightBooking.BonusService/FlightBooking.BonusService.csproj
+++ b/src/FlightBooking.BonusService/FlightBooking.BonusService.csproj
@@ -4,14 +4,13 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.10" />
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.11" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
-        <PackageReference Include="MassTransit.Newtonsoft" Version="8.0.8" />
         <PackageReference Include="AutoMapper" Version="11.0.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="Serilog" Version="2.12.0" />
@@ -29,10 +28,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\FlightBooking.BonusService.Dto\FlightBooking.BonusService.Dto.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Domain" />
     </ItemGroup>
 
 </Project>
