--- a/src/FlightBooking.Gateway/FlightBooking.Gateway.csproj
+++ b/src/FlightBooking.Gateway/FlightBooking.Gateway.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -15,8 +16,6 @@
         <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="6.0.3" />
         <PackageReference Include="AutoMapper" Version="11.0.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-        <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
-        <PackageReference Include="MassTransit.Newtonsoft" Version="8.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.10" />
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
