--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,6 +18,12 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       # TODO build, publish to docker hub, deploy to k8s
       - name: Build and publish images
         timeout-minutes: 15
