--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -30,11 +30,14 @@ jobs:
         run: |
           ./scripts/build-images.sh
 
+      - uses: actions-hub/kubectl@master
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+        with:
+          args: get pods
+      
       - name: Deploy
         run: |
-          kubectl config set-cluster rsoi-flights-service-cluster --server="$KUBE_URL" --insecure-skip-tls-verify=true
-          kubectl config set-credentials cloud_okteto_com-user --token="$KUBE_TOKEN"
-          kubectl config set-context default --cluster=rsoi-flights-service-cluster --user=cloud_okteto_com-user --namespace="maxim-kozlov"
           cd k8s && (helm delete services | true) && helm install services ./services-chart/
           sleep 45
 
