--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,21 +18,25 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # TODO build, publish to docker hub, deploy to k8s
       - name: Build and publish images
         timeout-minutes: 15
         run: |
-          ./scripts/build-images.sh
+          echo "$KUBE_URL"
+
+      # ./scripts/build-images.sh
 
       - uses: actions-hub/kubectl@master
         env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+          KUBE_HOST: ${{ secrets.KUBE_URL }}
+          # KUBE_CERTIFICATE: ${{ secrets.KUBE_CERTIFICATE }}
+          KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
         with:
           args: get pods
       
