--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions-hub/kubectl@master
         env:
           KUBE_HOST: ${{ secrets.KUBE_URL }}
-          # KUBE_CERTIFICATE: ${{ secrets.KUBE_CERTIFICATE }}
+          KUBE_CERTIFICATE: ${{ secrets.KUBE_CERTIFICATE }}
           KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
         with:
           args: get pods
