--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Deploy
         run: |
           echo "run deploy"
-          kubectl config set-cluster rsoi-flights-service-cluster --server="$KUBE_URL" --insecure-skip-tls-verify=true
+          kubectl config set-cluster rsoi-flights-service-cluster --server=https://146.148.56.200:443 --insecure-skip-tls-verify=true
           kubectl config set-credentials cloud_okteto_com-user --token="$KUBE_TOKEN"
           kubectl config set-context default --cluster=rsoi-flights-service-cluster --user=cloud_okteto_com-user --namespace="maxim-kozlov"
           cd k8s && (helm delete services | true) && helm install services ./services-chart/
