--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -32,15 +32,27 @@ jobs:
 
       # ./scripts/build-images.sh
       
+      - uses: actions-hub/kubectl@1.14.3
+        env:
+          KUBE_HOST: ${{ secrets.KUBE_HOST }}
+          KUBE_CERTIFICATE: ${{ secrets.KUBE_CERTIFICATE }}
+          KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
+        with:
+          args: get pods
+        continue-on-error: true
+
       - name: Deploy
         run: |
           echo "run deploy"
-          kubectl config set-cluster rsoi-flights-service-cluster --server=https://146.148.56.200:443 --insecure-skip-tls-verify=true
+          kubectl config set-cluster rsoi-flights-service-cluster --server="$KUBE_URL" --insecure-skip-tls-verify=true
           kubectl config set-credentials cloud_okteto_com-user --token="$KUBE_TOKEN"
           kubectl config set-context default --cluster=rsoi-flights-service-cluster --user=cloud_okteto_com-user --namespace="maxim-kozlov"
+          kubectl get pods
+
           cd k8s && (helm delete services | true) && helm install services ./services-chart/
           sleep 45
-
+        continue-on-error: true
+        
       - name: Run API Tests
         uses: matt-ball/newman-action@master
         with:
