--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,11 +18,11 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # TODO build, publish to docker hub, deploy to k8s
       - name: Build and publish images
@@ -31,25 +31,20 @@ jobs:
           echo "$KUBE_URL"
 
       # ./scripts/build-images.sh
-      
-      - uses: actions-hub/kubectl@master
-        env:
-          KUBE_HOST: ${{ secrets.KUBE_HOST }}
-          KUBE_CERTIFICATE: ${{ secrets.KUBE_CERTIFICATE }}
-          KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
-        with:
-          args: get pods
-        continue-on-error: true
 
       - name: Deploy
         run: |
           echo "run deploy"
+          echo "$KUBE_HOST"
+          echo "$KUBE_TOKEN"
+          echo "$test"
+          
           kubectl config set-cluster rsoi-flights-service-cluster --server="$KUBE_HOST" --insecure-skip-tls-verify=true
           kubectl config set-credentials cloud_okteto_com-user --token="$KUBE_TOKEN"
           kubectl config set-context default --cluster=rsoi-flights-service-cluster --user=cloud_okteto_com-user --namespace="maxim-kozlov"
           kubectl get pods
 
-          cd k8s && (helm delete services | true) && helm install services ./services-chart/
+          cd k8s && helm upgrade services ./services-chart
           sleep 45
         continue-on-error: true
 
