--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -36,21 +36,22 @@ jobs:
         run: |
           echo "run deploy"
 
-          echo kubectl config set-cluster rsoi-flights-service-cluster --server=https://146.148.56.200:443 --insecure-skip-tls-verify=true
-          kubectl config set-cluster rsoi-flights-service-cluster --server=https://146.148.56.200:443 --insecure-skip-tls-verify=true
+          echo kubectl config set-cluster rsoi-flights-service-cluster --server="KUBE_HOST" --insecure-skip-tls-verify=true
+          kubectl config set-cluster rsoi-flights-service-cluster --server="$KUBE_HOST" --insecure-skip-tls-verify=true
 
-          echo kubectl config set-credentials cloud_okteto_com-user --token=${{ secrets.KUBE_TOKEN }}
-          kubectl config set-credentials cloud_okteto_com-user --token=${{ secrets.KUBE_TOKEN }}
+          echo kubectl config set-credentials cloud_okteto_com-user --token=KUBE_TOKEN
+          kubectl config set-credentials cloud_okteto_com-user --token="$KUBE_TOKEN"
 
           echo kubectl config set-context default --cluster=rsoi-flights-service-cluster --user=cloud_okteto_com-user --namespace=\"maxim-kozlov\"
           kubectl config set-context default --cluster=rsoi-flights-service-cluster --user=cloud_okteto_com-user --namespace="maxim-kozlov"
           
+          kubectl config use-context default
+
           echo kubectl get pods
           kubectl get pods
 
           cd k8s && helm upgrade services ./services-chart
           sleep 45
-        continue-on-error: true
 
       - name: Run API Tests
         uses: matt-ball/newman-action@master
